Sun Sep 03 06:31:46 2000  George Lebl <jirka@5z.com>

	* configure.in:  Add an explicit check for capplet module (finally)

2000-08-30  Pablo Saratxaga <pablo@mandrakesoft.com>

	* applets/applet-dirs/*,desktop-links/*: added various Greek strings

2000-06-17  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in,po/sp.po,po/sr.po: Added Serbian language files
	(Cyrillic (sp) and Latin2 (sr))

2000-05-25 Pauli Virtanen <pauli.virtanen@saunalahti.fi>

	* Finnish update on files:
	applets/desk-guide/deskguide_applet.desktop
	applets/fish/fish_applet.desktop
	applets/gen_util/mailcheck_applet.desktop
	applets/gen_util/clock_applet.desktop
	applets/gen_util/printer.desktop
	applets/tasklist/tasklist_applet.desktop
	applets/applet-dirs/Amusements.directory
	applets/applet-dirs/Clocks.directory
	applets/applet-dirs/Monitors.directory
	applets/applet-dirs/Multimedia.directory
	applets/applet-dirs/Network.directory
	applets/applet-dirs/Utility.directory
	desktop-links/Emacs.desktop
	desktop-links/Eterm.desktop
	desktop-links/GIMP.desktop
	desktop-links/Gmc.desktop
	desktop-links/Imlib_config.desktop
	desktop-links/Kterm.desktop
	desktop-links/Netscape.desktop
	desktop-links/XMcd.desktop
	desktop-links/Tkrat.desktop
	desktop-links/UNIX-regular.desktop
	desktop-links/UNIX.desktop
	desktop-links/Vim.desktop
	desktop-links/Vnterm.desktop
	desktop-links/FileRunner.desktop
	desktop-links/GXanim.desktop
	desktop-links/TkSETI.desktop
	desktop-links/WordPerfect.desktop
	desktop-links/XEphem.desktop
	desktop-links/Xemacs.desktop
	desktop-links/gaspell.desktop
	desktop-links/lynx.desktop
	desktop-links/realplayer.desktop
	desktop-links/rxvt.desktop
	desktop-links/xbmbrowser.desktop
	desktop-links/xcolsel.desktop
	desktop-links/xmix.desktop
	desktop-links/xv.desktop
	desktop-links/Applications.directory
	desktop-links/Development.directory
	desktop-links/Games.directory
	desktop-links/Graphics.directory
	desktop-links/Internet.directory
	desktop-links/Multimedia.directory