@@ -1,3 +1,7 @@
+2000-09-03  Matt Wilson  <msw@redhat.com>
+
+	* misc.c: add compatibility macros for building against bzip2-1.0
+
 2000-07-11  David A. Wheeler  <dwheeler@dwheeler.com>
 	* gnome-man2html/man2html.c: Silenced spurious compiler warnings.
 
