@@ -1,3 +1,9 @@
+2000-09-03  Matt Wilson  <msw@redhat.com>
+
+	* acconfig.h: added HAVE_LIBBZ2_1_0, set to 1 if 1.0 is present
+
+	* configure.in (BZ_LIBS): add check for bzip2-1.0 library
+
 Sun Sep 03 06:31:46 2000  George Lebl <jirka@5z.com>
 
 	* configure.in:  Add an explicit check for capplet module (finally)
